Fix .env.example wrong var name

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@
 CHECKER_HOST=""
 
 # Required. URI to check. Include beginning / character.
-CHECKER_URL="/status-check"
+CHECKER_PATH="/status-check"
 
 # Optional. Default http. http or https.
 #CHECKER_PROTO="https"
